--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,19 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">WPI Monitor</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="/">Dashboard</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/settings">Settings</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
 
@@ -29,6 +42,12 @@
                             {% endfor %}
                         </select>
 
+                        <div class="mt-3">
+                            <label for="customTerminInput" class="form-label">Custom Termin (YYYYMM):</label>
+                            <input type="text" id="customTerminInput" class="form-control" placeholder="e.g. 202405" pattern="[0-9]{6}">
+                            <div class="form-text">Enter a termin in YYYYMM format to update or create a new period</div>
+                        </div>
+
                         <div class="d-grid gap-2 mt-3">
                             <button id="updateDataBtn" class="btn btn-primary">
                                 <i class="bi bi-arrow-clockwise"></i> Update Data
@@ -43,27 +62,6 @@
                                 <div class="alert alert-info">
                                     <span id="missingCount">0</span> files missing
                                     (<span id="missingPercentage">0%</span>)
-                                </div>
-                            </div>
-                        </div>
-                        
-                        <hr>
-                        
-                        <div id="configuration" class="mt-3">
-                            <h5>Configuration</h5>
-                            <div id="configContent">
-                                <div class="mb-3">
-                                    <label for="importCutDate" class="form-label">Import Cut Date</label>
-                                    <input type="text" class="form-control" id="importCutDate" placeholder="YYYYMMDD">
-                                </div>
-                                <div class="mb-3">
-                                    <label for="authFilePath" class="form-label">Auth File Path</label>
-                                    <input type="text" class="form-control" id="authFilePath" placeholder="Path to auth file">
-                                </div>
-                                <div class="d-grid gap-2">
-                                    <button id="saveConfigBtn" class="btn btn-success">
-                                        <i class="bi bi-save"></i> Save Configuration
-                                    </button>
                                 </div>
                             </div>
                         </div>
